@@ -120,6 +120,7 @@ typedef void(*DEVICE_ADD)(int, struct uaedev_config_info*, struct romconfig*);
 typedef bool(*E8ACCESS)(int, uae_u32*, int, bool);
 #define EXPANSIONTYPE_SCSI 1
 #define EXPANSIONTYPE_IDE 2
+#define EXPANSIONTYPE_24BIT 4
 struct expansionboardsettings
 {
 	const TCHAR *name;
